apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
  - name: web
    port: 7878
    targetPort: 7878
    protocol: TCP
